# services/main-api/docs/swagger.json
@@ -17,19 +17,33 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
                     }
                 ],
-                "description": "Rank managers by overall quality and KPI",
+                "description": "Rank managers by overall quality and KPI\nGet daily trends for call volume and quality",
                 "consumes": [
+                    "application/json",
                     "application/json"
                 ],
                 "produces": [
+                    "application/json",
                     "application/json"
                 ],
                 "tags": [
+                    "Analytics",
                     "Analytics"
                 ],
-                "summary": "Get sales representative leaderboard",
+                "summary": "Get call analytics trends",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Time period",
+                        "name": "period",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -63,6 +77,49 @@
                     {
                         "type": "string",
                         "description": "Time period (last_7_days, last_30_days, etc.)",
+                        "name": "period",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/analytics/trends": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Rank managers by overall quality and KPI\nGet daily trends for call volume and quality",
+                "consumes": [
+                    "application/json",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "Analytics",
+                    "Analytics"
+                ],
+                "summary": "Get call analytics trends",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Time period",
                         "name": "period",
                         "in": "query"
                     }
@@ -589,6 +646,66 @@
                 }
             }
         },
+        "/notifications": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all notifications for the current user",
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "List user notifications",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": true
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/notifications/{id}/read": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update notification status to read",
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Mark notification as read",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Notification ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/scripts": {
             "get": {
                 "security": [
@@ -1108,6 +1225,12 @@
                 },
                 "script_match": {
                     "type": "integer"
+                },
+                "topics": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -1237,6 +1360,9 @@
                 },
                 "created_at": {
                     "type": "string"
+                },
+                "definition": {
+                    "type": "object"
                 },
                 "file_path_minio": {
                     "type": "string"
