# services/main-api/internal/core/domain/script.go
@@ -1,19 +1,18 @@
 package domain
 
 import (
-	"encoding/json"
 	"time"
 )
 
 type Script struct {
-	ID            string          `json:"id"`
-	CompanyID     string          `json:"company_id"`
-	Name          string          `json:"name"`
-	FilePathMinio string          `json:"file_path_minio"`
-	ParsedText    string          `json:"parsed_text"`
-	Definition    json.RawMessage `json:"definition,omitempty"`
-	Version       int             `json:"version"`
-	IsActive      bool            `json:"is_active"`
-	CreatedAt     time.Time       `json:"created_at"`
-	UpdatedAt     time.Time       `json:"updated_at"`
+	ID            string      `json:"id"`
+	CompanyID     string      `json:"company_id"`
+	Name          string      `json:"name"`
+	FilePathMinio string      `json:"file_path_minio"`
+	ParsedText    string      `json:"parsed_text"`
+	Definition    interface{} `json:"definition,omitempty" swaggertype:"object"`
+	Version       int         `json:"version"`
+	IsActive      bool        `json:"is_active"`
+	CreatedAt     time.Time   `json:"created_at"`
+	UpdatedAt     time.Time   `json:"updated_at"`
 }
